<resources>
    <string name="app_name">Earn engine</string>
    <string name="important">Important</string>
    <string name="value">Value</string>
    <string name="banner_id">Banner ID</string>
    <string name="interstitialID">Interstitial ID</string>
    <string name="impression_points">Impression Points</string>
    <string name="points_per_rupee">PointsPerRupee</string>
    <string name="title">Title</string>
    <string name="link">Link</string>
    <string name="withdrawel">Withdrawel</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_apps">AppsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Admin panel</string>
    <string name="nav_header_subtitle">Think before you change/add something.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
